app/_assets/stylesheets/docsearch.less
#getkong-algolia-search {
  float: right;

  @media (max-width: 800px) {
    float: initial;
    display: inline-block;
    margin-right: 5px;
    .algolia-docsearch-suggestion--subcategory-column {
      display: none !important;
    }
  }
  @media (max-width: 476px) {
    margin: 10px 0 0;
    float: left;
    clear: both;
  }
}

.search-version-row {
  display: flex;
  justify-content: center;
}

.DocSearch-Button {
  background: #666C70;
  border: 1px solid #7E9FB6;
  border-radius: 3px;
  color: #fff;
  width: 100%;
  padding: 0 16px;
  opacity: 0.5;

  &:hover {
    background: #666C70;
    opacity: 0.7;
  }

  .DocSearch-Search-Icon {
    max-width: 20px;
    color: #fff;
  }
}

.DocSearch-Button-Placeholder {
  font: 400 16px/22px Roboto;
  color: #fff;
}

.DocSearch-Input {
  background-color: transparent !important;
  border: 0 !important;
  font-size: 1.2em !important;
  height: 100% !important;
  padding: 0 0 0 8px !important;
  box-shadow: none !important;
  margin: auto;
}

.DocSearch-HitsFooter {
  justify-content: flex-end;
}

@media (max-width: 899px) {
  .search-page {
    h1, h4 {
      text-align: center;
    }
  }
}

